--- a/admin-ms/src/main/webapp/public/common/fui/themes/skyblue/icons.css
+++ b/admin-ms/src/main/webapp/public/common/fui/themes/skyblue/icons.css
@@ -283,5 +283,10 @@
     background: url(icons/role.png) no-repeat;
 }
 
+.icon-run {
+    background: url(icons/run.png) no-repeat;
+}
 
-
+.icon-reverse {
+    background: url(icons/reverse.png) no-repeat;
+}
