添加我的收藏功能

--- a/admin-ms/src/main/webapp/public/common/fui/themes/skyblue/common.css
+++ b/admin-ms/src/main/webapp/public/common/fui/themes/skyblue/common.css
@@ -217,6 +217,8 @@ li { list-style: none; }
 .icon_new{display:inline-block; width:22px; height:9px; background:url(new_images/new.gif) no-repeat;}
 
 /*自定义菜单*/
+.icon_noimage{display:inline-block; width:45px; height:45px; background:url(menu_icons/noimage.png) no-repeat;}
+
 .icon_anniuziyuanguanli{display:inline-block; width:45px; height:45px; background:url(menu_icons/anniuziyuanguanli.png) no-repeat;}
 .icon_bangzhuwendang{display:inline-block; width:45px; height:45px; background:url(menu_icons/bangzhuwendang.png) no-repeat;}
 .icon_biangengrizhichaxun{display:inline-block; width:45px; height:45px; background:url(menu_icons/biangengrizhichaxun.png) no-repeat;}
