--- a/admin-ms/src/main/webapp/public/common/fui/themes/pact/fui.css
+++ b/admin-ms/src/main/webapp/public/common/fui/themes/pact/fui.css
@@ -3708,4 +3708,47 @@ body .fui-textboxlist-focus .fui-textboxlist-border
     white-space:nowrap;
 }
 
+.fui-tips
+{
+    *zoom:1;
+    cursor:default;
+    position:relative;
+    padding-left: 10px;
+    padding-top:5px;
+    padding-bottom:5px;
+    padding-right:30px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+
+    font-family:Verdana;
+    font-size:12px;
+
+    color: #777;
+    background-color: #f5f5f5;
+    border-color: #eee;
+}
+
+.fui-tips-success
+{
+    color: #468847;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+}
+.fui-tips-info {
+    color: #3a87ad;
+    background-color: #d9edf7;
+    border-color: #bce8f1;
+}
+.fui-tips-warning {
+    color: #c09853;
+    background-color: #fcf8e3;
+    border-color: #fbeed5;
+}
+.fui-tips-danger {
+    color: #b94a48;
+    background-color: #f2dede;
+    border-color: #eed3d7;
+}
+
 
